[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/font/segoe_print24.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UserInterface/HighestScore/ArcadeScore.gd" type="Script" id=2]
[ext_resource path="res://asset/UI/button/back_btn.png" type="Texture" id=3]
[ext_resource path="res://asset/UI/button/easy_score_btn.png" type="Texture" id=4]
[ext_resource path="res://asset/UI/button/hard_score_btn.png" type="Texture" id=5]
[ext_resource path="res://asset/UI/button/medium_score_btn.png" type="Texture" id=6]

[node name="ArcadeScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.0431373, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.5
margin_top = -44.0
margin_right = 81.5
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
margin_right = 163.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "Highest Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 163.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 9.0
margin_right = 45.0
margin_bottom = 42.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLevelBtn" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -107.0
margin_top = 98.5301
margin_right = 107.0
margin_bottom = 138.53
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="TextureButton" parent="HighScoreLevelBtn"]
margin_right = 69.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )

[node name="Medium" type="TextureButton" parent="HighScoreLevelBtn"]
margin_left = 73.0
margin_right = 141.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )

[node name="Hard" type="TextureButton" parent="HighScoreLevelBtn"]
margin_left = 145.0
margin_right = 214.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HighScoreLevelBtn/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="HighScoreLevelBtn/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="HighScoreLevelBtn/Hard" to="." method="_on_Hard_pressed"]
